fix: make remove from cart button red

--- a/elyreacts/src/components/styles/CartItem.module.scss
+++ b/elyreacts/src/components/styles/CartItem.module.scss
@@ -39,6 +39,12 @@
 
         & > button {
             margin-top: 1.5rem;
+
+            background: $color_fail;
+
+            &:hover {
+                background: lighten($color_fail, 5);
+            }
         }
     }
 }
