--- a/elyreacts/src/pages/styles/Profile.module.scss
+++ b/elyreacts/src/pages/styles/Profile.module.scss
@@ -3,7 +3,7 @@
 .pageHeader {
     position: relative;
     display: grid;
-    grid-template-rows: repeat(4, max-content);
+    grid-template-rows: repeat(5, max-content);
     grid-template-columns: 1fr auto 1fr;
     justify-items: center;
 
@@ -75,8 +75,26 @@
         }
     }
 
-    & > div.imageContainer {
+    & > a.instagramContainer {
         grid-area: 4 / 2 / 5 / 3;
+
+        margin-top: 1.5rem;
+
+        & > img {
+            filter: invert(100%) sepia(0%) saturate(5292%) hue-rotate(216deg) brightness(110%)
+                contrast(96%);
+
+            transition: $transition_time_link;
+        }
+
+        &:hover > img {
+            filter: invert(58%) sepia(13%) saturate(1285%) hue-rotate(202deg) brightness(94%)
+                contrast(100%);
+        }
+    }
+
+    & > div.imageContainer {
+        grid-area: 5 / 2 / 6 / 3;
 
         box-sizing: border-box;
 
