--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -132,7 +132,6 @@ a > div.image {
     & > span {
         padding: 0.5rem 1.5rem;
         border: 0.15rem solid $color_brand_primary;
-        // border-radius: 0.5rem;
 
         // Match <small /> text style
         font-size: 0.75rem;
@@ -153,8 +152,6 @@ a > div.image {
 
     &:hover {
         & > span {
-            // padding: 0.25rem 1.5rem; // todo: fix page jump
-
             color: $color_background;
             border-color: $color_brand_primary_light;
             background: $color_brand_primary_light;
@@ -162,6 +159,26 @@ a > div.image {
 
         & > ul {
             max-height: 32em;
+        }
+    }
+}
+
+ul.regular {
+    list-style-type: square;
+
+    margin-left: 1rem;
+
+    & > li > * {
+        margin-left: 1rem;
+        padding: 0.25rem 0;
+    }
+
+    &.no-bullets {
+        margin-left: 0;
+        list-style-type: none;
+
+        & > li > * {
+            margin-left: 0;
         }
     }
 }
