--- a/elyreacts/src/components/styles/Footer.module.scss
+++ b/elyreacts/src/components/styles/Footer.module.scss
@@ -1,23 +1,75 @@
 @import "../../variables.scss";
 
 footer.container {
+    display: grid;
+    grid-template-rows: repeat(2, max-content);
+    box-sizing: border-box;
+
     width: 100%;
 
-    margin-top: 2.5rem;
+    margin-top: 1.5rem;
 
     background: $color_background_alt;
 }
 
-.content {
-    min-height: 12rem;
-    max-width: $max-width_content;
+.mainContent {
+    display: grid;
+    grid-template-rows: repeat(3, max-content);
+    grid-template-columns: 1fr;
+    grid-gap: 1.5rem;
 
-    margin: 0 auto;
-    padding: 1rem 2rem;
+    padding: 1.5rem;
 
-    color: $color_text;
+    .logoContainer {
+        margin: 0 auto;
+
+        & > img {
+            width: 4rem;
+        }
+    }
+
+    & > div,
+    & > nav {
+        & > h1 {
+            font-size: 2rem;
+        }
+
+        & > ul {
+            margin-top: 0.5rem;
+        }
+    }
+}
+
+.lowerContent {
+    display: flex;
+    flex-direction: column;
+
+    padding: 1.5rem;
+
+    background: $color_background;
+
+    & > span,
+    & > small {
+        width: 100%;
+
+        text-align: center;
+    }
 
     & > span {
-        color: $color_brand_primary;
+        color: $color_white;
+    }
+
+    & > small {
+        margin-top: 0.25rem;
+        &:first-of-type {
+            margin-top: 1.5rem;
+        }
+    }
+}
+
+@media only screen and (min-width: $media_width_tablet) {
+    .mainContent {
+        grid-template-columns: max-content 1fr 1fr;
+        grid-template-rows: 1fr;
     }
 }
