--- a/elyreacts/src/pages/styles/Poster.module.scss
+++ b/elyreacts/src/pages/styles/Poster.module.scss
@@ -16,51 +16,45 @@
         position: relative;
 
         width: 100%;
-        height: 100%;
+        max-height: 80vh;
 
-        & > div.image {
-            min-height: 16rem;
-            max-height: 80vh;
+        background: $color_background_alt;
+
+        & > img {
             height: 100%;
-            width: auto;
+            width: 100%;
 
-            background-size: contain;
-            background-position: center;
-        }
-
-        .buttons {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-
-            display: grid;
-            grid-template-rows: repeat(2, 1fr);
-            grid-gap: 0.5rem;
-
-            transition: $transition_time_anim;
+            object-fit: contain;
         }
     }
 
     & > div.informationContainer {
         display: grid;
-        grid-template-rows: repeat(5, max-content);
-        grid-template-columns: auto minmax(min-content, max-content);
-        grid-gap: 0.5rem;
+        grid-template-rows: repeat(6, max-content);
+        grid-template-columns: 1fr;
+        // grid-gap: 0.5rem;
         align-items: baseline;
 
-        h3 {
-            & + * {
-                margin-top: 0.5rem;
-            }
+        margin: auto 0;
 
+        & > * {
+            margin: 0 auto;
+
+            text-align: center;
+        }
+
+        & > h1 {
+            margin-top: 1.5rem;
+        }
+
+        h2 {
             font-size: 0.8rem;
+            font-weight: 700;
             text-transform: uppercase;
             color: $color_text_alt;
         }
 
         & > div.statsContainer {
-            grid-area: 1/1/2/3;
-
             display: grid;
             grid-gap: 0.5rem;
             grid-template-columns: repeat(4, max-content);
@@ -77,47 +71,38 @@
         }
 
         & > h2 {
-            grid-area: 2/1/3/2;
+            margin-top: 1.5rem;
 
-            margin-top: 1rem;
+            & + * {
+                margin-top: 0.5rem;
+            }
         }
 
         & > strong.price {
-            grid-area: 2/2/3/3;
+            margin-top: 1.5rem;
 
-            margin-top: 1rem;
+            font-size: 1.25rem;
         }
 
         & > div.authorContainer {
-            grid-area: 3/1/4/3;
-
             display: flex;
             align-items: center;
+
+            margin-top: 0.5rem;
 
             & > a > img {
                 height: 2rem;
                 width: 2rem;
-                border-radius: 50%;
-
                 margin-right: 0.5rem;
+                border-radius: 50%;
             }
         }
 
-        & > div.captionContainer {
-            grid-area: 4/1/5/3;
-
-            margin-top: 1rem;
-
-            & > p {
-                margin: 0.25rem 0 0 0;
-
-                text-align: left;
-            }
+        & > p {
+            margin: 0.25rem 0 0 0;
         }
 
         & > div.purchaseCTAContainer {
-            grid-area: 5/1/6/3;
-
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -189,17 +174,11 @@
         grid-template-rows: 1fr;
         grid-template-columns: repeat(2, 1fr);
 
-        & > div.imageContainer > div.image {
-            background-position: right;
-        }
-
-        & > div.informationContainer > div.purchaseCTAContainer {
-            margin-left: 0;
-            margin-right: auto;
-
+        & > div.informationContainer {
             & > * {
-                margin-left: 0;
-                margin-right: auto;
+                margin: 0 auto 0 0;
+
+                text-align: left;
             }
         }
     }
