fix: Fix disabled button syle

--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -290,7 +290,7 @@ button {
         color: $color_text_alt;
     }
 
-    &.button-primary {
+    &.button-primary:not(:disabled) {
         background: $color_brand_primary;
 
         &:hover {
