style: add margin-top to information grid

--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -568,6 +568,7 @@ div.information-grid {
     width: max-content;
 
     margin: 0 auto;
+    margin-top: 1.5rem;
 
     & > *:nth-child(2n-1) {
         // Column left
