--- a/elyreacts/src/pages/styles/PosterEdit.module.scss
+++ b/elyreacts/src/pages/styles/PosterEdit.module.scss
@@ -296,28 +296,22 @@
 }
 
 .iconViews {
+    display: inline-block;
+
     width: 1rem;
     height: 1rem;
-
-    // Correct icon offset
-    margin-top: 0.125rem;
-    margin-bottom: -0.125rem;
-
-    margin-right: 0.5rem;
 
     background-image: url("../../assets/images/views.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
+
 .iconLikes {
     display: inline-block;
 
     width: 1rem;
     height: 1rem;
-
-    // Correct icon offset
-    margin: -0.1rem 0.575rem 0.1rem -0.075rem;
 
     background-image: url("../../assets/images/heart.png");
     background-size: contain;
