--- a/elyreacts/src/components/styles/Footer.module.scss
+++ b/elyreacts/src/components/styles/Footer.module.scss
@@ -18,6 +18,7 @@ footer.container {
     grid-template-columns: 1fr;
     grid-gap: 1.5rem;
 
+    margin: 0;
     padding: 1.5rem;
 
     .logoContainer {
@@ -69,7 +70,10 @@ footer.container {
 
 @media only screen and (min-width: $media_width_tablet) {
     .mainContent {
-        grid-template-columns: max-content 1fr 1fr;
+        grid-template-columns: max-content max-content max-content auto;
         grid-template-rows: 1fr;
+        grid-gap: 3rem;
+
+        margin: 0 auto;
     }
 }
