--- a/elyreacts/src/components/styles/SalesItem.module.scss
+++ b/elyreacts/src/components/styles/SalesItem.module.scss
@@ -35,6 +35,13 @@
                 font-size: 0.75rem;
                 color: $color_grey;
             }
+
+            & > span {
+                margin-right: 0.5rem;
+
+                font-size: 1.5rem;
+                color: $color_success;
+            }
         }
 
         & > button {
