--- a/elyreacts/src/App.scss
+++ b/elyreacts/src/App.scss
@@ -339,12 +339,35 @@ button {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
 
         &:hover {
-            color: $color_brand_primary;
+            color: $color_brand_primary_light;
         }
 
         &.active {
-            background: $color_brand_primary;
+            background: $color_grey_light;
+            color: $color_brand_primary;
+
+            & > span {
+                margin: 0 1px 0 -1px;
+            }
+        }
+
+        &.light {
+            background: $color_grey_dark;
             color: $color_text;
+
+            &:hover {
+                background: $color_grey;
+                color: $color_text;
+            }
+
+            &.active {
+                background: $color_grey;
+                color: $color_text;
+
+                & > span {
+                    margin: 0 1px 0 -1px;
+                }
+            }
         }
     }
 }
@@ -628,6 +651,30 @@ div.information-grid {
     & > button {
         margin: 0.25rem;
     }
+}
+
+.icon-likes {
+    display: inline-block;
+
+    width: 1rem;
+    height: 1rem;
+
+    background-image: url("./assets/images/heart.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.icon-views {
+    display: inline-block;
+
+    width: 1rem;
+    height: 1rem;
+
+    background-image: url("./assets/images/views.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 @media only screen and (min-width: $media_width_tablet) {
